--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,8 @@ body {
   font-weight: 700; 
   letter-spacing: .3px;
   font-size: clamp(0.8rem, 2vw, 1rem);
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 h1 { 
   font-weight: 900; 
@@ -878,4 +880,8 @@ a.premium:focus-visible::after {
     hyphens: none !important;
     font-size: clamp(28px, 7vw, 38px) !important;
   }
+}
+
+@media (min-width: 700px){
+  .hero__content{ margin-top: clamp(78px, 11vh, 150px); }
 }
